@@ -585,8 +585,11 @@ fill_sells_list (GDate *date_begin, GDate *date_end)
 void
 fill_totals (GDate *date_begin, GDate *date_end)
 {
+  PGresult *res;
   gint total_cash_sell;
   gint total_cash;
+  gint total_cash_discount;
+  gint total_discount;
   gint total_credit_sell;
   gint total_credit;
   gint total_sell;
@@ -595,6 +598,17 @@ fill_totals (GDate *date_begin, GDate *date_end)
   total_cash_sell = GetTotalCashSell (g_date_get_year (date_begin), g_date_get_month (date_begin), g_date_get_day (date_begin),
                                       g_date_get_year (date_end), g_date_get_month (date_end), g_date_get_day (date_end),
                                       &total_cash);
+
+  res = EjecutarSQL
+    (g_strdup_printf ("select * from sells_get_totals (to_date ('%.2d %.2d %.4d', 'DD MM YYYY'), to_date ('%.2d %.2d %.4d', 'DD MM YYYY'))",
+                      g_date_get_day (date_begin), g_date_get_month (date_begin), g_date_get_year (date_begin),
+                      g_date_get_day (date_end), g_date_get_month (date_end), g_date_get_year (date_end)));
+
+  if (res != NULL)
+    {
+      total_cash_discount = atoi (PQvaluebycol (res, 0, "total_cash_discount"));
+      total_discount = atoi (PQvaluebycol (res, 0, "total_discount"));
+    }
 
   total_credit_sell = GetTotalCreditSell (g_date_get_year (date_begin), g_date_get_month (date_begin), g_date_get_day (date_begin),
                                           g_date_get_year (date_end), g_date_get_month (date_end), g_date_get_day (date_end),
@@ -640,6 +654,19 @@ fill_totals (GDate *date_begin, GDate *date_end)
     gtk_label_set_markup (GTK_LABEL (builder_get (builder, "lbl_sell_average")),
                           g_strdup_printf ("<span>$%s</span>",
                                            PutPoints (g_strdup_printf ("%d", total_sell / total_ventas))));
+
+  gtk_label_set_markup (GTK_LABEL (builder_get (builder, "lbl_sell_discount")),
+                        g_strdup_printf ("<span>$%s</span>",
+                                         PutPoints (g_strdup_printf ("%d", total_cash_discount))));
+
+  gtk_label_set_markup (GTK_LABEL (builder_get (builder, "lbl_sell_discount_n")),
+                        g_strdup_printf ("<span>%s</span>",
+                                         PutPoints (g_strdup_printf ("%d", total_discount))));
+
+  gtk_label_set_markup (GTK_LABEL (builder_get (builder, "lbl_sell_discount_avarage")),
+                        g_strdup_printf ("<span>$%s</span>",
+                                         PutPoints (g_strdup_printf ("%d", total_cash_discount / total_discount))));
+
 }
 
 void
